	NX-1386 (Implemented units for Server Variables)


*
* 2.2.5
*

- Agent tunnel falls back to unbound mode in case of agent certificate validation failure
- Zone information added to alarm log, event log, SNMP trap log, and syslog
- Agent returns correct free memory value on Windows
- Parameter System.Memory.Physical.Cached supported on Windows
- Fixed issues:
	NX-622 ( Alerts will not be generated in certain conditions: events, that persist after maintenence and node down after unreachable)
	NX-922 (Service check template objects disappears after server restart)
	NX-1097 (Configuration option to ignore alarm's helpdesk state when doing resolve or terminate)
	NX-1157 (configure --with-dist fails if OpenSSL is not installed)
	NX-1397 (Implement Windows Update information parameters for Windows 10 and Windows Server 2016)
	NX-1417 (File.Size parameter not working for Windows pagefile.sys)
	NX-1418 (Sort scripts in Execute Server Script dropdown)
	NX-1419 (AgentTunnels.ProcessUnbound scheduled task should be hidden)
	NX-1420 (Do not use unmanaged devices with SNMP for MAC resolving)
	NX-1421 (Configuration poll for node without SNMP and agent always read ARP cache from all SNMP devices in subnet)
	NX-1431 ("Don't Fragment" option for ping sub-agent)
	NX-1434 (Return from function from within foreach loop in NXSL can cause unexpected runtime error)


*
* 2.2.4
*

- Portech SMS gateway works correctly with newer gateway versions
- Fixed issues:
	NX-1208 (Added filter to alarm list)
	NX-1295 (MIB Walk from DCI missing Column)
	NX-1332 (Execution timeout for external parameter provider)
	NX-1337 (Map link color based on object status)
	NX-1346 (Unable to select template group on config export)
	NX-1400 (NetworkMap link can be locked when using bendpoints)
	NX-1403 (Setting floor plan view from right-click menu does not work)
	NX-1404 (No source node in events generated by syslog parser)
	NX-1405 (Agent may crash when parsing Windows event log message)